# gwsignal4gwsurr

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: GW150914.ini
gwsignal4gwsurr/: NRHybSur3dq8_wrapper.py  NRSur3dq8_Lev2_varenya_wrapper.py  NRSur3dq8_Lev3_varenya_wrapper.py  NRSur7dq4_LALSim_wrapper.py  NRSur7dq4_wrapper.py  __init__.py  gwsurr.py  gwsurr_playground.py  utils_bilby.py
gwsignal4gwsurr/wrappers/: NRHybSur3dq8_wrapper.py  NRSur3dq8_Lev2_varenya_wrapper.py  NRSur3dq8_Lev3_varenya_wrapper.py  NRSur7dq4_LALSim_wrapper.py  NRSur7dq4_wrapper.py
